# AlgoVoi-MCP-Server

./: .gitignore  Dockerfile  README.md  smoke_mcp_full.py
python/: pyproject.toml
python/algovoi_mcp/: client.py  networks.py  schemas.py  server.py
python/tests/: test_tools.py
typescript/: package-lock.json  package.json
typescript/src/: client.ts  index.ts  networks.ts  schemas.ts  tools.ts
typescript/test/: tools.test.ts
